[gd_scene load_steps=4 format=3 uid="uid://bn47vym847ol5"]

[ext_resource type="Script" path="res://scripts/nimble_enemy.gd" id="1_d73n8"]
[ext_resource type="Texture2D" uid="uid://clxxox065u1ci" path="res://assets/sprites/nimble_enemy.png" id="2_ekc51"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xpifc"]
radius = 12.0

[node name="NimbleEnemy" type="RigidBody2D"]
collision_layer = 2
collision_mask = 5
gravity_scale = 0.0
max_contacts_reported = 1
contact_monitor = true
linear_damp = 5.0
script = ExtResource("1_d73n8")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -2)
scale = Vector2(2, 2)
texture = ExtResource("2_ekc51")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_xpifc")

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="DespawnTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
